🎉auto update by Gmeek action

--- a/backup/快速免费制作博客教程来了.md
+++ b/backup/快速免费制作博客教程来了.md
@@ -93,7 +93,7 @@ ogImage | 用于设置Open Graph协议展示的图片`
 **三、常见问题**
 1. 搭建不成功
 多半是没有按照安装步骤来，其实搭建就这2步，不要自己乱点乱设置，就不会有问题。
-
+提示:如果添加配置请在后面添加逗号否则会报错
 案例一：https://github.com/Meekdai/Gmeek/issues/14
 案例二：https://github.com/Meekdai/Gmeek/issues/18
 案例二：https://github.com/Meekdai/Gmeek/issues/20
