--- a/backup/测试软件下载.md
+++ b/backup/测试软件下载.md
@@ -1,3 +1,3 @@
-[点击此处下载(寻找端)](https://creation.codemao.cn/434/5131452330D34E3DA4C7B0A826C141A6/find发起端.apk)
+[点击下载(寻找端)](https://creation.codemao.cn/434/5131452330D34E3DA4C7B0A826C141A6/find发起端.apk)
 
-[点击此处下载(被寻找端)](https://creation.codemao.cn/434/4295D757477649E7BE5EDB4D511A9CF7/find接受端.apk)
+[点击下载(被寻找端)](https://creation.codemao.cn/434/4295D757477649E7BE5EDB4D511A9CF7/find接受端.apk)
