🎉auto update by Gmeek action

--- a/backup/开户教程.md
+++ b/backup/开户教程.md
@@ -9,7 +9,7 @@
 自己注册
 
 > _3.telegram(会发)_
-- 下载点击[下载telegram](https://cdn4.cdn-telegram.org/file/Telegram.apk?token=p2x3kvBJd6jZfCLhse15muZmt5PLsukLk8RT7w-wsgZtKDe6YD12PVWAZGrniqI0MXl_8fbOOp7VYyu3NVoN3Uj6mocEW8iujQjad0bwCTTMqrRfgc4k6TqTSKpJKO4XYJEkfq1kMQrsGDCBspVy7BrRtWR4UA0YbLAcgx4flq3_N5JQhT2DfBS9f7QMMmAnrdf1Mq5cuel62curtmjOj6RxVpIalFK_CfqYjBXzOm2myyrCX7wFgcaiwHF48PJN4qP1PZrs9_G5MVKznRy4N3u5Ow8F7NbIBcnJxkXg2qymsCq955vY_x407VxiXmDyVpJh8C_OpFYZo3WZ0I-uHQD3ljhVoU5e18za-ZhgNDBVrv4TF7gCzpj_9udGC65vlMs6t3T2hxq1OMBN2L4wls0ys6fT_Hlr9BIBNjUPvQNmeOf2xfT43qFJZMTaiQQUaU2r-CYP87Ar0B49Hq6KQJkG28Du8nMj3FEWWaXUXxs65FHFvW3ByeFPRFLVIXRH75GDpcrUPCl3EUVR26CqZWSEKJdEdrJEZvGpWNmrLOKxpcrKN8XNgP_NK4P5a4U2BDMba7vjoaeg-ZCPsuuOre42ZiXJ4l70IZ_n8cCAG4C0H451QolZUT_FHgm03474EXHmKIYWR-yCtFMiAsRFL7HQbblK7PbOBniJ1lHke2hpOfS07D0H_2HOQgec6yqNVVOk4MzDaC5jsqAKHQKbYm7ZZODduARnbWD5c1qcwkUbEZPP2K86naSzHnvV2v7F_q8Y3EVYpgZ5fT3_uNSKwH23uyKjvk2Ch-kS0o_ujGa3-Ue8ZhOnyHwxrQn8b5Lg8EpOSfPyzYwm3gKkZFKRyHMTo4qzJMt4zXKxs9mROywqy6DdUDC7QX9S3lp99J6OwdETjp3t_MQ5RWUdlPywz00qFuweV7c928oUjRyjlDrXKOaLL-grbskCFSg-0-dEO-SAF8961pBZSmETboyv5srVQcVjKnHldIE4aR2H9M7Ud8N8WHt5OGAUpQxJCNQ_pr58X0oHwclqmWKXumh15o1LB406nJJKI9CtkfE2ASDZFkut8CRjOVBx1_tpiU4zJjwR8_ZczqQJXYZ_Sq2mgv3FvoBO7xcQKl5iNL-G1lE9p4P0hpaoKvnVgnCdBSBHWp1mycAr0ZvzFhJJuMREzNlwUjSCoYTNZziSJUryJVPFV-qBcTj_0xvfzpf4hKjnpjBN0Bfcza5GRk31uVaGzRIg58D3D41YhfccCqx2HV9ujA3Px029MFmJyG2EfBaxNqrdBKhyLbWiTO0x1mu-eLybL9wmtKzDewFhd2ALintNo_3NBa2Eq2DTgEzkqd-ftKeQO9CVB9Y-43aiGpZg1UW-1jBByURyomDGpKAs-gaOdB1ahiOVFVWvh4obfvr88dnPU3wXkOSBoiv5g9TKv4S8ZmrlJ4b_MSlZJzR13L_x0RWqC9udeKGbd0wwb-kZIswKllZvT0B1-JD1qyOw1VGEnmP-ImyzVXQGcWTMM3KnAJFZfG-ckVv7-QcUZPzYuJYjA2mw5nvWcfcDj2QMo2Dsft8UFMlq1y1b2CsYvAhHMY54EwLHCOqwOx-oVakMKmEnqJQZOsU50M09dSi6M53RH1aTo07bIVQwQXzDC4Fuj6SWq_xJvi6Oe7G4PPI9EsJwVS-HONpm6R5hcJHb7qJvwKMEKd2BtODRbl35cRM)
+- 下载点击[下载telegram](https://www.telegram.org/dl/android/apk)
 
 > _3.telegramX(会发)_
 - 下载点击[下载telegramX](https://dw.uptodown.net/dwn/eJnS04mfQu1eXBHUMiOdxOkEsdkUD9nfrin-WKncHbfcrJIGFNxaaL2Mj2KZznmy9RNZAPl5RMV4LXnNWlBdGU8X2dAx9OVJX6apQoeJZLgoRTAsQZd_ubgXBNryFy-F/fu2zLvlTpz7mJugefwRpEcM2tbSyV-PqAbytyKHmNeiKj651jM5TrZhoTyg8Iw_a30PXwtGDV-RCgd1u5sQuL_030j96gl1Xh73EDJ0PzMf-c_aihmJNlMG2_JeIl7xD/ci-FnpMn5r-VyC3fjCPFr8KSqgUwUv0YEUdB73Xf30TXJyNvWj09PWXYi94z5uC5fGbZYW1cnZHQ-mRMGAi9JyBZTRF6771CnNEpwsFUVeY=/telegram-x-0-26-11-1734-arm64-v8a.apk)
@@ -44,7 +44,7 @@ _7.机器人(会发)_
 打开链接自动点确认自动添加
 暗精灵- [暗精灵](https://t.me/AJL01_bot?start=qaRpMfZUeL)
 
-繁花- [暗精灵](http://t.me/FanHuaSGK_bot?start=FanHua_VECQOZEK)
+繁花- [繁花](http://t.me/FanHuaSGK_bot?start=FanHua_VECQOZEK)
 
 日月- [日月](https://t.me/RYSGKBOT?start=7449301675)
 
@@ -59,3 +59,6 @@ Hope- [Hope](https://t.me/HereisHopeBot?start=Xabaea2807e044ef6e8111cb6a2193819)
 **注意**
 如果是英文请点链接切换中文
  [点我换中文](tg://setlanguage?lang=classic-zh-cn )
+
+**最后看在我给大家做教程的份上可以打赏吗**
+![微信图片_20240911221817](https://github.com/user-attachments/assets/cad27fd6-e485-448f-8eb4-e0f72dc3abfd)
