🎉auto update by Gmeek action

--- a/backup/开户教程.md
+++ b/backup/开户教程.md
@@ -58,7 +58,8 @@ Hope- [Hope](https://t.me/HereisHopeBot?start=Xabaea2807e044ef6e8111cb6a2193819)
 
 **注意**
 如果是英文请点链接切换中文
-中文- [点我换中文]((tg://setlanguage?lang=classic-zh-cn)
+中文tg://setlanguage?lang=classic-zh-cn
+长按打开
 
 
 **最后看在我给大家做教程的份上可以打赏吗**
