🎉auto update by Gmeek action

--- a/backup/开户教程.md
+++ b/backup/开户教程.md
@@ -7,12 +7,14 @@
 > _2.qq邮箱_
 
 自己注册
+**注意**
+文件三天后会过期
 
 > _3.telegram(会发)_
 - 下载点击[下载telegram](https://www.telegram.org/dl/android/apk)
-
+**注意:要开加速器**
 > _3.telegramX(会发)_
-- 下载点击[下载telegramX](https://dw.uptodown.net/dwn/eJnS04mfQu1eXBHUMiOdxOkEsdkUD9nfrin-WKncHbfcrJIGFNxaaL2Mj2KZznmy9RNZAPl5RMV4LXnNWlBdGU8X2dAx9OVJX6apQoeJZLgoRTAsQZd_ubgXBNryFy-F/fu2zLvlTpz7mJugefwRpEcM2tbSyV-PqAbytyKHmNeiKj651jM5TrZhoTyg8Iw_a30PXwtGDV-RCgd1u5sQuL_030j96gl1Xh73EDJ0PzMf-c_aihmJNlMG2_JeIl7xD/ci-FnpMn5r-VyC3fjCPFr8KSqgUwUv0YEUdB73Xf30TXJyNvWj09PWXYi94z5uC5fGbZYW1cnZHQ-mRMGAi9JyBZTRF6771CnNEpwsFUVeY=/telegram-x-0-26-11-1734-arm64-v8a.apk)
+- 下载点击[下载telegramX](https://upfile.live/files/eba33c21)
 
 
 _5.手_
