🎉auto update by Gmeek action

--- a/backup/开户教程.md
+++ b/backup/开户教程.md
@@ -23,21 +23,24 @@ _7.机器人(会发)_
 
 
 **教程开始**
-首先
+** 首先
 打开安心加速器
-注册以后使用香港服务器
+注册以后使用香港服务器** 
 
-然后打开telegramX
+** 然后打开telegramX
+
 ![微信图片_20240911215225](https://github.com/user-attachments/assets/301a41ba-8aa2-42ba-9c5e-aff39d1e7130)
+
 用电话号码注册账户
 然后用邮箱注册
-得到验证码后就可以登录了
+得到验证码后就可以登录了** 
 
 
-打开telegram
+** 打开telegram
 使用刚刚注册的
 电话再输入一遍
-然后打开刚刚的软件获取验证码就可以了
+然后打开刚刚的软件获取验证码就可以了** 
+
 ![微信图片_20240911215842](https://github.com/user-attachments/assets/eb466073-a9bf-4dc6-95d9-48e1925984b0)
 
 ![微信图片_20240911215838](https://github.com/user-attachments/assets/f35b19af-2214-4762-9021-60047f9d6b84)
@@ -68,10 +71,13 @@ Hope- [Hope](https://t.me/HereisHopeBot?start=Xabaea2807e044ef6e8111cb6a2193819)
 ![微信图片_20240911221817](https://github.com/user-attachments/assets/cad27fd6-e485-448f-8eb4-e0f72dc3abfd)
 
 恭喜幸运嘉宾的身份证!
-🏷️数据来源: 二要素信息库
-姓名: 吴家豪
+
+> 🏷️数据来源: 二要素信息库
+
+**姓名:吴家豪
 证件号码: 441802199606107313
-证件解析: 男 广东省清远市清城区
+证件解析: 男 广东省清远市清城区** 
+
 ![微信图片_20240911222808](https://github.com/user-attachments/assets/46916edf-a65a-466f-8061-9898e1c0aaa0)
 
 查人5块起
