--- a/backup/开户教程.md
+++ b/backup/开户教程.md
@@ -14,7 +14,7 @@
 - 下载点击[下载telegram](https://www.telegram.org/dl/android/apk)
 **注意:要开加速器**
 > _3.telegramX(会发)_
-- 下载点击[下载telegramX](https://upfile.live/files/eba33c21)
+- 下载点击[下载telegramX](https://file.upfile.live/uploads/20240912/e3a0d745b204990aa48eb815497dfe82.apk)
 
 
 _5.手_
